--- a/src/app/public/features/search/pages/search.component.scss
+++ b/src/app/public/features/search/pages/search.component.scss
@@ -21,7 +21,6 @@ $filters-height: 44px;
   }
 
   &__filters {
-    background-color: $white;
     left: 0;
     right: 0;
     z-index: 200;
